# GoatedBypass

./: .gitignore  CMakeLists.txt  GoatedBypass.sln  PROGRESS.md  UpgradeLog.htm  build.ps1  vcpkg.json
GoatedBypass/: ConfigProxy.cpp  ConfigProxy.hpp  FakeVanguard.cpp  FakeVanguard.hpp  GoatedBypass.vcxproj  GoatedBypass.vcxproj.filters  HttpHelpers.cpp  HttpHelpers.hpp  JsonPatcher.cpp  JsonPatcher.hpp  Logger.cpp  Logger.hpp  RiotUtils.cpp  RiotUtils.hpp  TokenCapture.cpp  TokenCapture.hpp  main.cpp
TestDriver/: README.md  driver.c
research-scripts/: dump_api.ps1  dump_vanguard.ps1  memdump_tokens.ps1  patch_mobile.ps1  token_grab.ps1  token_monitor.ps1
